# spinher

./: README.md  pyproject.toml
rich/: __main__.py
src/spinher/: README  __init__.py
tests/: test1.py
