[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spinher"
author = "Gerrishon Sirere"
author-email = "gerryshon254@gmail.com"
home-page = "https://github.com/viewerdiscretion/spinher"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Anyone Else", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Anyone",
    "Programming Language :: Python :: 2 :: Only",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License"
    ]
requires = [
    "quo >=2021.1.dev4",
]
description-file = "README.md"
requires-python = ">=2.7"

[tool.flit.metadata.urls]
Documentation = "https://viewerdiscretion.github.io/spinher"

[tool.flit.metadata.requires-extra]
test = [
    "quo >=2021.1.dev4",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=5.4.0,<6.0.0",
    "markdown-include >=0.5.1,<0.6.0"
]
dev = [
    "autoflake >=1.3.1,<2.0.0",
    "flake8 >=3.8.3,<4.0.0",
]
all = [
    "colorama >=0.4.3,<0.5.0",
    "shellingham >=1.3.0,<2.0.0"
]

[tool.isort]
profile = "black"
known_third_party = ["quo",]
skip_glob = [
    "tests/main.py",
    "tests/lands.py",
    "tests/main.py",
    ]
