[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spinher"
author = "Gerrishon Sirere"
author-email = "gerryshon254@gmail.com"
home-page = "https://github.com/viewerdiscretion/spinher"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Anyone Else", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Anyone",
    "Programming Language :: Python :: 2 :: Only",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License"
    ]
requires = [
    "quo >=2021.1.dev4",
]
description-file = "README.md"
requires-python = ">=2.7"

[tool.flit.metadata.urls]
Documentation = "https://viewerdiscretion.github.io/spinher"

[tool.flit.metadata.requires-extra]
test = [
    "quo >=2021.1.dev4",
]

all = [
    "quo >=2021.1.dev4",
]

[tool.isort]
profile = "black"
known_third_party = ["quo",]
skip_glob = [
    "tests/main.py",
    "tests/lands.py",
    "tests/main.py",
    ]
